discussion/kv_engine/155543/155543_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46827: Store reference to KVBucket in VBucket

We already do that for EPBucket, move it up in the hierarchy to VBucket.

Change-Id: I359b1c6995e2320b68f9ca696522fb418234ecf2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-06-10 14:37:28.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 15:24:29.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36705/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36705/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9742/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9742/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9742/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11737/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11737/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8337/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/267/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31372/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19320/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11317/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11465/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10389/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
